--- a/BlogOn/Areas/Management/Views/Post/Index.cshtml
+++ b/BlogOn/Areas/Management/Views/Post/Index.cshtml
@@ -1,31 +1,83 @@
-﻿<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
-    <div class="row">
-        <ol class="breadcrumb">
-            <li>
-                <a href="#">
-                    <em class="fa fa-home"></em>
-                </a>
-            </li>
-            <li class="active">Posts</li>
-        </ol>
-    </div><!--/.row-->
+﻿@model IEnumerable<BlogOn.Models.Post>
 
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Posts</h1>
-        </div>
-    </div><!--/.row-->
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4>Posts</h4>
-                </div>
-                <div class="panel-body">
-                    <h4>New Orders</h4>
+<div class="row">
+    <div class="col">
+        <div class="card shadow">
+            <div class="card-header border-0">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h3 class="mb-0">POSTS</h3>
+                    </div>
+                    <div class="col text-right">
+                        <a asp-action="Create" class="btn btn-sm btn-primary">Create a New Post</a>
+                    </div>
                 </div>
             </div>
+
+            @if (Model.Count() > 0)
+            {
+                <div class="table-responsive">
+                    <table class="table align-items-center table-flush">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">@Html.DisplayNameFor(model => model.ID)</th>
+                                <th scope="col">@Html.DisplayNameFor(model => model.Title)</th>
+                                <th scope="col">@Html.DisplayNameFor(model => model.UserID)</th>
+                                <th scope="col">@Html.DisplayNameFor(model => model.CreatedAt)</th>
+                                <th scope="col"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                            <tr>
+                                <th>@Html.DisplayFor(model => item.ID)</th>
+                                <th>@Html.DisplayFor(model => item.Title)</th>
+                                <th>@item.User.FullName()</th>
+                                <th>@item.User.CreatedAt.ToLongDateString()</th>
+                                <td class="text-right">
+                                    <partial name="_ActionButtonsPartial" model="item.ID">
+                                </td>
+                            </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="card-footer py-4">
+                    <nav aria-label="...">
+                        <ul class="pagination justify-content-end mb-0">
+                            <li class="page-item disabled">
+                                <a class="page-link" href="#" tabindex="-1">
+                                    <i class="fas fa-angle-left"></i>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
+                            <li class="page-item active">
+                                <a class="page-link" href="#">1</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">
+                                    <i class="fas fa-angle-right"></i>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            }
+            else
+            {
+                <div class="card-body">
+                    <div class="alert alert-primary" role="alert">
+                        There are no any resources to show here.
+                    </div>
+                </div>
+            }
         </div>
-    </div><!--/.row-->
-</div>	<!--/.main-->
+    </div>
+</div>
