--- a/BlogOn/Views/Account/Register.cshtml
+++ b/BlogOn/Views/Account/Register.cshtml
@@ -4,66 +4,104 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Register</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/assets/identity/vendor/bootstrap/css/bootstrap.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/assets/identity/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/assets/identity/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/assets/identity/css/util.css">
-    <link rel="stylesheet" type="text/css" href="~/assets/identity/css/main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
+    <meta name="author" content="Creative Tim">
+    <title>Login</title>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <!-- Icons -->
+    <link href="~/assets/management/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+    <link href="~/assets/management/vendor/@Html.Raw("@fortawesome")/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Argon CSS -->
+    <link type="text/css" href="~/assets/management/css/argon.css?v=1.0.0" rel="stylesheet">
 </head>
-<body>
-
-    <div class="limiter">
-        <div class="container-login100">
-            <div class="wrap-login100 p-t-90 p-b-30">
-                <form asp-action="Register" asp-controller="Account" class="login100-form validate-form">
-                    <span class="login100-form-title p-b-40">
-                        Register
-                    </span>
-
-                    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter email: ex@abc.xyz">
-                        <input class="input100" asp-for="Email" placeholder="Email">
+<body class="bg-default">
+    <div class="main-content">
+        <!-- Header -->
+        <div class="header bg-gradient-primary py-7 py-lg-8">
+            <div class="container">
+                <div class="header-body text-center mb-7">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-5 col-md-6">
+                        </div>
                     </div>
-
-                    <div class="wrap-input100 validate-input m-b-20" data-validate="Please enter password">
-                        <span class="btn-show-pass">
-                            <i class="fa fa fa-eye"></i>
-                        </span>
-                        <input class="input100" asp-for="Password" placeholder="Password">
+                </div>
+            </div>
+            <div class="separator separator-bottom separator-skew zindex-100">
+                <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                    <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
+                </svg>
+            </div>
+        </div>
+        <!-- Page content -->
+        <div class="container mt--8 pb-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-md-7">
+                    <div class="card bg-secondary shadow border-0">
+                        <div class="card-header bg-transparent pb-5">
+                            <div class="text-muted text-center mt-2 mb-3"><small>Sign up with</small></div>
+                            <div class="btn-wrapper text-center">
+                                <a href="#" class="btn btn-neutral btn-icon">
+                                    <span class="btn-inner--icon"><img src="~/assets/management/img/icons/common/github.svg"></span>
+                                    <span class="btn-inner--text">Github</span>
+                                </a>
+                                <a href="#" class="btn btn-neutral btn-icon">
+                                    <span class="btn-inner--icon"><img src="~/assets/management/img/icons/common/google.svg"></span>
+                                    <span class="btn-inner--text">Google</span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card-body px-lg-5 py-lg-5">
+                            <div class="text-center text-muted mb-4">
+                                <small>Or sign up with credentials</small>
+                            </div>
+                            <form role="form" asp-action="Login" asp-controller="Account">
+                                <div class="form-group mb-3">
+                                    <div class="input-group input-group-alternative">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                                        </div>
+                                        <input class="form-control" placeholder="Email" asp-for="Email">
+                                    </div>
+                                    <span class="text-danger" asp-validation-for="Email"></span>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group input-group-alternative">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                                        </div>
+                                        <input class="form-control" placeholder="Password" asp-for="Password">
+                                    </div>
+                                    <span class="text-danger" asp-validation-for="Password"></span>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group input-group-alternative">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                                        </div>
+                                        <input class="form-control" placeholder="Confirm Password" asp-for="ConfirmPassword">
+                                    </div>
+                                    <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+                                </div>
+                                <div class="text-center">
+                                    <button type="submit" class="btn btn-primary my-4">Register</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-
-                    <div class="wrap-input100 validate-input m-b-20" data-validate="Please enter password">
-                        <span class="btn-show-pass">
-                            <i class="fa fa fa-eye"></i>
-                        </span>
-                        <input class="input100" asp-for="ConfirmPassword" placeholder="Password">
+                    <div class="row mt-3">
+                        <div class="col-6">
+                            <a href="#" class="text-light"><small>Forgot password?</small></a>
+                        </div>
+                        <div class="col-6 text-right">
+                            <a asp-action="Login" class="text-light"><small>Already have an account. Sign In.</small></a>
+                        </div>
                     </div>
-
-                    <div class="container-login100-form-btn">
-                        <button class="login100-form-btn">
-                            Register
-                        </button>
-                    </div>
-
-                    <div class="flex-col-c p-t-224">
-                        <span class="txt2 p-b-10">
-                            Already have an account?
-                        </span>
-
-                        <a asp-action="Login" class="txt3 bo1 hov1">
-                            Sign in now
-                        </a>
-                    </div>
-
-                </form>
+                </div>
             </div>
         </div>
     </div>
@@ -71,7 +109,11 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
-    <script src="~/assets/identity/js/main.js"></script>
-
+    <!-- Argon Scripts -->
+    <!-- Core -->
+    <script src="~/assets/management/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="~/assets/management/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Argon JS -->
+    <script src="~/assets/management/js/argon.js?v=1.0.0"></script>
 </body>
 </html>
