--- a/BlogOn/Views/Home/Index.cshtml
+++ b/BlogOn/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿    <!-- Page Header -->
+﻿@model IEnumerable<BlogOn.Models.Post>
+
+<!-- Page Header -->
 <header class="masthead">
     <div class="overlay"></div>
     <div class="container">
@@ -17,67 +19,34 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        Man must explore, and this is exploration at its greatest
-                    </h2>
-                    <h3 class="post-subtitle">
-                        Problems look mighty small from 150 miles up
-                    </h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on September 24, 2018
-                </p>
-            </div>
-            <hr>
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
-                    </h2>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on September 18, 2018
-                </p>
-            </div>
-            <hr>
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        Science has not yet mastered prophecy
-                    </h2>
-                    <h3 class="post-subtitle">
-                        We predict too much for the next year and yet far too little for the next ten.
-                    </h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on August 24, 2018
-                </p>
-            </div>
-            <hr>
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        Failure is not an option
-                    </h2>
-                    <h3 class="post-subtitle">
-                        Many say exploration is part of our destiny, but it’s actually our duty to future generations.
-                    </h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on July 8, 2018
-                </p>
-            </div>
-            <hr>
+            @foreach (var item in Model)
+            {
+                <div class="post-preview">
+                    <a asp-action="Details" asp-controller="Post" asp-route-id="@item.ID" asp-route-month="@item.CreatedAt.Month" asp-route-year="@item.CreatedAt.Year" asp-route-slug="@item.Slug">
+                        <h2 class="post-title">
+                            @Html.DisplayFor(model => item.Title)
+                        </h2>
+                        <h3 class="post-subtitle">
+                            @if (item.Body.Length > 150)
+                            {
+                                @item.Body.Substring(0, 150)
+                                @Html.Raw("...")
+                            }
+                            else
+                            {
+                                @item.Body
+                            }
+                        </h3>
+                    </a>
+                    <p style="font-style: normal" class="post-meta">
+                        Posted by
+                        <a>@item.User.FullName()</a>
+                        on @item.CreatedAt.ToShortDateString()
+                    </p>
+                </div>
+                <hr>
+            }
+
             <!-- Pager -->
             <div class="clearfix">
                 <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
