--- a/BlogOn/Areas/Management/Views/Post/Create.cshtml
+++ b/BlogOn/Areas/Management/Views/Post/Create.cshtml
@@ -24,8 +24,8 @@
                         <span class="text-danger" asp-validation-for="Body"></span>
                     </div>
                     <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input">
-                        <label class="form-check-label" for="exampleCheck1">Publish</label>
+                        <input type="checkbox" asp-for="IsActive" class="form-check-input">
+                        <label class="form-check-label" asp-for="IsActive">Active</label>
                     </div>
                     <button type="submit" class="btn btn-primary">CREATE</button>
                     <a asp-action="Index" class="btn btn-default">BACK TO LIST</a>
