--- a/BlogOn/Areas/Management/Views/Post/Delete.cshtml
+++ b/BlogOn/Areas/Management/Views/Post/Delete.cshtml
@@ -22,8 +22,8 @@
                         <textarea readonly class="form-control" asp-for="Body" rows="3"></textarea>
                     </div>
                     <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input">
-                        <label class="form-check-label" for="exampleCheck1">Publish</label>
+                        <input disabled type="checkbox" asp-for="IsActive" class="form-check-input">
+                        <label class="form-check-label" asp-for="IsActive">Active</label>
                     </div>
                     <button asp-route-id="@Model.ID" type="submit" class="btn btn-danger">DELETE</button>
                     <a asp-action="Index" class="btn btn-default">BACK TO LIST</a>
