--- a/BlogOn/Views/Shared/_Layout.cshtml
+++ b/BlogOn/Views/Shared/_Layout.cshtml
@@ -104,5 +104,6 @@
     <script src="~/assets/client/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Custom scripts for this template -->
     <script src="~/assets/client/js/clean-blog.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
