Comment module that located in management area has implemented completely.

--- a/BlogOn/Areas/Management/Views/Shared/_Layout.cshtml
+++ b/BlogOn/Areas/Management/Views/Shared/_Layout.cshtml
@@ -116,6 +116,11 @@
                             <i class="ni ni-send text-primary"></i> Posts
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-action="Index" asp-controller="Comment">
+                            <i class="ni ni-chat-round text-primary"></i> Comments
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
