Implemented a new service for the dashboard that located in management layer, and also, a new attribute - website link, has inserted in the index view which belongs to comment controller.

--- a/BlogOn/Areas/Management/Views/Home/Index.cshtml
+++ b/BlogOn/Areas/Management/Views/Home/Index.cshtml
@@ -1,22 +1,23 @@
-﻿@{ 
+﻿@using BlogOn.Services.Management.Dashboard
+@inject StatisticsService Stats;
+@{
     ViewData["Title"] = "Dashboard";
 }
 
 <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-6">
-        <div class="card card-stats">
+        <div style="border-radius: 2px" class="card card-stats">
             <div class="card-body ">
                 <div class="row">
                     <div class="col-5 col-md-4">
                         <div class="icon-big text-center icon-warning">
-                            <i class="nc-icon nc-globe text-warning"></i>
+                            <i class="nc-icon nc-chat-33 text-warning"></i>
                         </div>
                     </div>
                     <div class="col-7 col-md-8">
                         <div class="numbers">
-                            <p class="card-category">Capacity</p>
-                            <p class="card-title">150GB
-                            <p>
+                            <p class="card-category">Daily Comments</p>
+                            <p class="card-title">@Stats.DailyComments()<p>
                         </div>
                     </div>
                 </div>
@@ -30,19 +31,18 @@
         </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-6">
-        <div class="card card-stats">
+        <div style="border-radius: 2px" class="card card-stats">
             <div class="card-body ">
                 <div class="row">
                     <div class="col-5 col-md-4">
                         <div class="icon-big text-center icon-warning">
-                            <i class="nc-icon nc-money-coins text-success"></i>
+                            <i class="nc-icon nc-single-02 text-success"></i>
                         </div>
                     </div>
                     <div class="col-7 col-md-8">
                         <div class="numbers">
-                            <p class="card-category">Revenue</p>
-                            <p class="card-title">$ 1,345
-                            <p>
+                            <p class="card-category">Daily Users</p>
+                            <p class="card-title">@Stats.DailyUsers()<p>
                         </div>
                     </div>
                 </div>
@@ -50,13 +50,13 @@
             <div class="card-footer ">
                 <hr>
                 <div class="stats">
-                    <i class="fa fa-calendar-o"></i> Last day
+                    <i class="fa fa-refresh"></i> Update Now
                 </div>
             </div>
         </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-6">
-        <div class="card card-stats">
+        <div style="border-radius: 2px" class="card card-stats">
             <div class="card-body ">
                 <div class="row">
                     <div class="col-5 col-md-4">
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-6">
-        <div class="card card-stats">
+        <div style="border-radius: 2px" class="card card-stats">
             <div class="card-body ">
                 <div class="row">
                     <div class="col-5 col-md-4">
