--- a/BlogOn/Areas/Management/Views/Comment/Index.cshtml
+++ b/BlogOn/Areas/Management/Views/Comment/Index.cshtml
@@ -12,12 +12,13 @@
             <div class="card-body">
                 @if (Model.Count() > 0)
                 {
-                    <div class="table-responsive">
+                    <div style="overflow: hidden;" class="table-responsive">
                         <table class="table">
                             <thead class=" text-primary">
                                 <tr>
                                     <th scope="col">@Html.DisplayNameFor(model => model.ID)</th>
                                     <th scope="col">@Html.DisplayNameFor(model => model.Body)</th>
+                                    <th scope="col">@Html.DisplayNameFor(model => model.PostID)</th>
                                     <th scope="col">@Html.DisplayNameFor(model => model.UserID)</th>
                                     <th scope="col">@Html.DisplayNameFor(model => model.IsActive)</th>
                                     <th scope="col">@Html.DisplayNameFor(model => model.CreatedAt)</th>
@@ -30,6 +31,9 @@
                                     <tr>
                                         <td>@Html.DisplayFor(model => item.ID)</td>
                                         <td>@if (@item.Body.Length > 50) { @item.Body.Substring(0, 50) @Html.Raw("...") } else { @item.Body}</td>
+                                        <td>
+                                            <a asp-action="Details" asp-controller="Post" asp-area="" asp-route-id="@item.Post.ID" asp-route-month="@item.CreatedAt.Month" asp-route-year="@item.Post.CreatedAt.Year" asp-route-slug="@item.Post.Slug">Visit the Post</a>
+                                        </td>
                                         <td>@item.User.FullName()</td>
                                         <td>
                                             @if (@item.IsActive == true)
