--- a/BlogOn/Areas/Management/Views/Post/Index.cshtml
+++ b/BlogOn/Areas/Management/Views/Post/Index.cshtml
@@ -10,14 +10,14 @@
             Create a New Resource
         </a>
         <div class="clearfix"></div>
-        <div style="border-radius: 2px" class="card">
+        <div style="border-radius: 2px;" class="card">
             <div class="card-header">
                 <h6 class="title">@ViewData["Title"]</h6>
             </div>
             <div class="card-body">
                 @if (Model.Count() > 0)
                 {
-                    <div class="table-responsive">
+                    <div style="overflow: hidden;" class="table-responsive">
                         <table class="table">
                             <thead class=" text-primary">
                                 <tr>
