--- a/BlogOn/Views/Account/Login.cshtml
+++ b/BlogOn/Views/Account/Login.cshtml
@@ -1,116 +1,60 @@
 ﻿@model BlogOn.Models.ViewModels.Account.LoginViewModel
-@{
-    Layout = null;
+@{ 
+    ViewData["Title"] = "Login";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-    <meta name="author" content="Creative Tim">
-    <title>Login</title>
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-    <!-- Icons -->
-    <link href="~/assets/management/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-    <link href="~/assets/management/vendor/@Html.Raw("@fortawesome")/fontawesome-free/css/all.min.css" rel="stylesheet">
-    <!-- Argon CSS -->
-    <link type="text/css" href="~/assets/management/css/argon.css?v=1.0.0" rel="stylesheet">
-</head>
-<body class="bg-default">
-    <div class="main-content">
-        <!-- Header -->
-        <div class="header bg-gradient-primary py-7 py-lg-8">
-            <div class="container">
-                <div class="header-body text-center mb-7">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-5 col-md-6">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="separator separator-bottom separator-skew zindex-100">
-                <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
-                </svg>
-            </div>
-        </div>
-        <!-- Page content -->
-        <div class="container mt--8 pb-5">
-            <div class="row justify-content-center">
-                <div class="col-lg-5 col-md-7">
-                    <div class="card bg-secondary shadow border-0">
-                        <div class="card-header bg-transparent pb-5">
-                            <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
-                            <div class="btn-wrapper text-center">
-                                <a href="#" class="btn btn-neutral btn-icon">
-                                    <span class="btn-inner--icon"><img src="~/assets/management/img/icons/common/github.svg"></span>
-                                    <span class="btn-inner--text">Github</span>
-                                </a>
-                                <a href="#" class="btn btn-neutral btn-icon">
-                                    <span class="btn-inner--icon"><img src="~/assets/management/img/icons/common/google.svg"></span>
-                                    <span class="btn-inner--text">Google</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="card-body px-lg-5 py-lg-5">
-                            <div class="text-center text-muted mb-4">
-                                <small>Or sign in with credentials</small>
-                            </div>
-                            <form asp-antiforgery="true" role="form" asp-action="Login" asp-controller="Account">
-                                <div class="form-group mb-3">
-                                    <div class="input-group input-group-alternative">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                                        </div>
-                                        <input class="form-control" placeholder="Email" asp-for="Email">
-                                    </div>
-                                    <span class="text-danger" asp-validation-for="Email"></span>
-                                </div>
-                                <div class="form-group">
-                                    <div class="input-group input-group-alternative">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                                        </div>
-                                        <input class="form-control" placeholder="Password" asp-for="Password">
-                                    </div>
-                                    <span class="text-danger" asp-validation-for="Password"></span>
-                                </div>
-                                <div class="custom-control custom-control-alternative custom-checkbox">
-                                    <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
-                                    <label class="custom-control-label" for=" customCheckLogin">
-                                        <span class="text-muted">Remember me</span>
-                                    </label>
-                                </div>
-                                <div class="text-center">
-                                    <button type="submit" class="btn btn-primary my-4">Sign in</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-6">
-                            <a href="#" class="text-light"><small>Forgot password?</small></a>
-                        </div>
-                        <div class="col-6 text-right">
-                            <a asp-action="Register" class="text-light"><small>Create new account</small></a>
-                        </div>
-                    </div>
+<header class="masthead">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="text-center post-heading">
+                    <h1>@ViewData["Title"]</h1>
                 </div>
             </div>
         </div>
     </div>
+</header>
 
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
-    <!-- Argon Scripts -->
-    <!-- Core -->
-    <script src="~/assets/management/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="~/assets/management/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Argon JS -->
-    <script src="~/assets/management/js/argon.js?v=1.0.0"></script>
-</body>
-</html>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4 col-md-5 mx-auto">
+            <form asp-action="Login" asp-controller="Account" asp-antiforgery="true">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1>Login</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <input placeholder="E-Mail" style="border-radius: 0" class="form-control" asp-for="Email" autocomplete="off">
+                            <span class="text-danger" asp-validation-for="Email"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <input placeholder="Password" style="border-radius: 0" class="form-control" asp-for="Password">
+                            <span class="text-danger" asp-validation-for="Password"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button class="btn btn-lg btn-primary btn-block">Sign in</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <small>
+                            <a asp-action="Register" asp-controller="Account">Do not have an account? Sign Up.</a>
+                        </small>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
