--- a/BlogOn/Areas/Management/Views/Shared/_Layout.cshtml
+++ b/BlogOn/Areas/Management/Views/Shared/_Layout.cshtml
@@ -18,33 +18,7 @@
     <div class="wrapper ">
         <div class="sidebar" data-color="white" data-active-color="danger">
             <div class="sidebar-wrapper">
-                <ul class="nav">
-                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Home" ? "active" : "")">
-                        <a asp-action="Index" asp-controller="Home">
-                            <i class="nc-icon nc-bank"></i>
-                            <p>Dashboard</p>
-                        </a>
-                    </li>
-                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Post" ? "active" : "")">
-                        <a asp-action="Index" asp-controller="Post">
-                            <i class="nc-icon nc-send"></i>
-                            <p>Posts</p>
-                        </a>
-                    </li>
-                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Comment" ? "active" : "")">
-                        <a asp-action="Index" asp-controller="Comment">
-                            <i class="nc-icon nc-chat-33"></i>
-                            <p>Comments</p>
-                        </a>
-                    </li>
-                    <li class="active-pro">
-                        <a href="javascript: $('#logout').submit()">
-                            <i class="nc-icon nc-button-power"></i>
-                            <p>Logout</p>
-                        </a>
-                    </li>
-                    <form asp-antiforgery="true" id="logout" action="@Url.Action("Logout", "Account", new { area = "" })" method="post"></form>
-                </ul>
+                <partial name="_NavigationPartial" />
             </div>
         </div>
         <div class="main-panel">
