Added some serrvices on dashboard.

--- a/BlogOn/Areas/Management/Views/Home/Index.cshtml
+++ b/BlogOn/Areas/Management/Views/Home/Index.cshtml
@@ -61,14 +61,13 @@
                 <div class="row">
                     <div class="col-5 col-md-4">
                         <div class="icon-big text-center icon-warning">
-                            <i class="nc-icon nc-vector text-danger"></i>
+                            <i class="nc-icon nc-bullet-list-67 text-danger"></i>
                         </div>
                     </div>
                     <div class="col-7 col-md-8">
                         <div class="numbers">
-                            <p class="card-category">Errors</p>
-                            <p class="card-title">23
-                            <p>
+                            <p class="card-category">Total Categories</p>
+                            <p class="card-title">@Stats.TotalCategories()<p>
                         </div>
                     </div>
                 </div>
@@ -76,7 +75,7 @@
             <div class="card-footer ">
                 <hr>
                 <div class="stats">
-                    <i class="fa fa-clock-o"></i> In the last hour
+                    <i class="fa fa-refresh"></i> Update Now
                 </div>
             </div>
         </div>
@@ -87,14 +86,13 @@
                 <div class="row">
                     <div class="col-5 col-md-4">
                         <div class="icon-big text-center icon-warning">
-                            <i class="nc-icon nc-favourite-28 text-primary"></i>
+                            <i class="nc-icon nc-tag-content text-primary"></i>
                         </div>
                     </div>
                     <div class="col-7 col-md-8">
                         <div class="numbers">
-                            <p class="card-category">Followers</p>
-                            <p class="card-title">+45K
-                            <p>
+                            <p class="card-category">Total Tags</p>
+                            <p class="card-title">@Stats.TotalTags()<p>
                         </div>
                     </div>
                 </div>
@@ -102,7 +100,7 @@
             <div class="card-footer ">
                 <hr>
                 <div class="stats">
-                    <i class="fa fa-refresh"></i> Update now
+                    <i class="fa fa-refresh"></i> Update Now
                 </div>
             </div>
         </div>
