Category filter has implemented.

--- a/BlogOn/Areas/Management/Views/Category/Delete.cshtml
+++ b/BlogOn/Areas/Management/Views/Category/Delete.cshtml
@@ -15,14 +15,14 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label asp-for="Name"></label>
-                                <input class="form-control" asp-for="Name" autocomplete="off">
+                                <input readonly class="form-control" asp-for="Name" autocomplete="off">
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" asp-for="IsActive">
+                                <input disabled type="checkbox" class="form-check-input" asp-for="IsActive">
                                 <label class="form-check-label" asp-for="IsActive"></label>
                             </div>
                         </div>
