--- a/BlogOn/Views/Category/Posts.cshtml
+++ b/BlogOn/Views/Category/Posts.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BlogOn.Models.Post>
 
 @{
-    ViewData["Title"] = "Welcome";
+    ViewData["Title"] = "Posts";
 }
 
 @foreach (var item in Model)
