--- a/BlogOn/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/BlogOn/Views/Shared/Components/CategoryList/Default.cshtml
@@ -3,6 +3,6 @@
 <ol class="list-unstyled mb-0">
     @foreach (var item in Model)
     {
-        <li><a href="#">@Html.DisplayFor(model => item.Name)</a></li>
+        <li><a asp-action="Posts" asp-controller="Category" asp-route-id="@item.ID" asp-route-slug="@item.Slug">@Html.DisplayFor(model => item.Name)</a></li>
     }
 </ol>
