--- a/BlogOn/Areas/Management/Views/Category/Index.cshtml
+++ b/BlogOn/Areas/Management/Views/Category/Index.cshtml
@@ -23,6 +23,7 @@
                                 <tr>
                                     <th scope="col">@Html.DisplayNameFor(model => model.ID)</th>
                                     <th scope="col">@Html.DisplayNameFor(model => model.Name)</th>
+                                    <th scope="col">@Html.DisplayNameFor(model => model.Slug)</th>
                                     <th scope="col">@Html.DisplayNameFor(model => model.IsActive)</th>
                                     <th scope="col">@Html.DisplayNameFor(model => model.CreatedAt)</th>
                                     <th scope="col"></th>
@@ -34,6 +35,7 @@
                                     <tr>
                                         <td>@Html.DisplayFor(model => item.ID)</td>
                                         <td>@item.Name</td>
+                                        <td>@item.Slug</td>
                                         <td>
                                             @if (@item.IsActive == true)
                                             {
