--- a/BlogOn/Views/Shared/_Layout.cshtml
+++ b/BlogOn/Views/Shared/_Layout.cshtml
@@ -49,9 +49,13 @@
             </div><!-- /.blog-main -->
 
             <aside class="col-md-4 blog-sidebar">
-                <div class="p-3 mb-3 bg-light">
-                    <h4>About</h4>
-                    <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                <div class="p-3">
+                    <h4>Search</h4>
+                    <form method="get" asp-action="Index" asp-controller="Search">
+                        <div class="form-group">
+                            <input name="keyword" placeholder="Keyword" style="border-radius: 0" class="form-control" autocomplete="off">
+                        </div>
+                    </form>
                 </div>
 
                 <div class="p-3">
